tests/compile-tests/bad_op.stderr
error: expression should be a ==, >= or <= comparison
 --> tests/compile-tests/bad_op.rs:6:8
  |
6 |     c!(x + y + 2 * z + 1);
  |        ^^^^^^^^^^^^^^^^^

error: expression should be a ==, >= or <= comparison
 --> tests/compile-tests/bad_op.rs:7:8
  |
7 |     c!(2 * z);
  |        ^^^^^

error: expression should be a ==, >= or <= comparison
 --> tests/compile-tests/bad_op.rs:8:8
  |
8 |     c!(2 / z);
  |        ^^^^^
